Several fixes for scrollbar mode with acrylic effects.

--- a/config/client/scrollbars/hide.css
+++ b/config/client/scrollbars/hide.css
@@ -2,14 +2,23 @@
 :root {
   --option-display-scrollbars: 0px;
   --option-navbar-position: absolute;
-  --option-downloads-position: absolute;
   --option-navbar-margin: 32px;
-  --option-playbar-margin: 48px;
+  --option-downloads-position: absolute;
   --option-downloads-margin: 200px;
+  --option-downloads-top: 0px;
+  --option-downloads-base: transparent;
+  --option-downloads-background: transparent;
+  --option-downloads-filter: none;
+  --option-downloads-blend: none;
+  --option-downloads-acrylic: url();
   --option-controls-background: transparent;
+  --option-playbar-margin: 48px;
   --option-playbar-background: transparent;
   --option-playbar-filter: none;
   --option-playbar-blend: none;
   --option-playbar-acrylic: url();
   --option-playbar-scrollbar: 0px;
+  --option-overlay-position: sticky;
+  --option-overlay-margin: 0px;
+
 }
