--- a/config/client/scrollbars/show.css
+++ b/config/client/scrollbars/show.css
@@ -2,11 +2,17 @@
 :root {
   --option-display-scrollbars: 16px;
   --option-navbar-position: relative;
-  --option-downloads-position: relative;
   --option-navbar-margin: 0px;
-  --option-playbar-margin: 0px;
+  --option-downloads-position: relative;
   --option-downloads-margin: 0px;
+  --option-downloads-top: 200px;
+  --option-downloads-base: var(--color-acrylic);
+  --option-downloads-background: var(--color-acrylic-focus-window);
+  --option-downloads-filter: blur(var(--blur-radius));
+  --option-downloads-blend: exclusion;
+  --option-downloads-acrylic: var(--acrylic);
   --option-controls-background: var(--color-acrylic);
+  --option-playbar-margin: 0px;
   --option-playbar-background: var(--color-acrylic-focus-window);
   --option-playbar-filter: blur(var(--blur-radius));
   --option-playbar-blend: exclusion;
