--- a/css/variables/options.css
+++ b/css/variables/options.css
@@ -18,15 +18,21 @@
 
   --display-scrollbars: var(--option-display-scrollbars, 0px);
   --navbar-position: var(--option-navbar-position, absolute);
-  --downloads-position: var(--option-downloads-position, absolute);
   --navbar-margin: var(--option-navbar-margin, 32px);
-  --playbar-margin: var(--option-playbar-margin, 48px);
+  --downloads-position: var(--option-downloads-position, absolute);
   --downloads-margin: var(--option-downloads-margin, 200px);
+  --downloads-top: var(--option-downloads-top, 0px);
+  --downloads-base: var(--option-downloads-base, transparent);
+  --downloads-background: var(--option-downloads-background, transparent);
+  --downloads-filter: var(--option-downloads-filter, none);
+  --downloads-blend: var(--option-downloads-blend, none);
+  --downloads-acrylic: var(--option-downloads-acrylic, url());
   --controls-background: var(--option-controls-background, transparent);
-  --playbar-background: var(--option-playbar-background, var(--color-acrylic-focus-window));
-  --playbar-filter: var(--option-playbar-filter, blur(var(--blur-radius)));
-  --playbar-blend: var(--option-playbar-blend, exclusion);
-  --playbar-acrylic: var(--option-playbar-acrylic, var(--acrylic));
+  --playbar-margin: var(--option-playbar-margin, 48px);
+  --playbar-background: var(--option-playbar-background, transparent);
+  --playbar-filter: var(--option-playbar-filter, none);
+  --playbar-blend: var(--option-playbar-blend, none);
+  --playbar-acrylic: var(--option-playbar-acrylic, url());
   --playbar-scrollbar: var(--option-playbar-scrollbar, 0px);
 
   --display-tooltips: var(--option-display-tooltips, block);
